testsuite/tests/interpreter_errors/invalid_kind/test.out
main.adb
script.lkql:1:11: error: Invalid kind name: PreposterouslyInvalidKind
1 | query p @ PreposterouslyInvalidKind
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^ 

